src/test/ui/regions/regions-pattern-typing-issue-19997.stderr
error[E0506]: cannot assign to `a1` because it is borrowed
  --> $DIR/regions-pattern-typing-issue-19997.rs:7:13
   |
LL |     match (&a1,) {
   |            --- borrow of `a1` occurs here
LL |         (&ref b0,) => {
LL |             a1 = &f;
   |             ^^^^^^^ assignment to borrowed `a1` occurs here
LL |             drop(b0);
   |                  -- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
